Fix alignment of checkbox

--- a/app/assets/stylesheets/submissions.css.less
+++ b/app/assets/stylesheets/submissions.css.less
@@ -159,6 +159,15 @@
     width: 100%;
     display: flex;
 
+    .checkbox {
+      margin-bottom: 0;
+      margin-top: 0;
+
+      label {
+        min-height: unset;
+      }
+    }
+
     .diff-switch-buttons {
       align-self: flex-end;
 
